--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
 
             <!-- 提取码输入框 -->
-            <input id="code-input" placeholder="Enter the share code">
+            <input id="code-input" placeholder="输入分享码">
             <button id="fetch-button">获取分享码</button>
             <p id="text-display"></p>
         </div>
