--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
             <!-- 获取到的文本卡片 -->
             <div id="text-card" class="hidden">
-                <p>Retrieved Text: <span id="text-display"></span></p>
+                <p><span id="text-display"></span></p>
                 <button id="copy-text-button">复制文本</button>
             </div>
         </div>
