--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
 
             <!-- 提取码输入框 -->
-            <input id="code-input" placeholder="输入分享代码">
+            <input id="code-input" placeholder="输入分享码">
             <button id="fetch-button">获取文本</button>
 
             <!-- 获取到的文本卡片 -->
