--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
             <!-- 分享码卡片 -->
             <div id="code-card" class="hidden">
-                <p>Share code: <span id="code-display"></span></p>
+                <p>分享码： <span id="code-display"></span></p>
                 <button id="copy-code-button">复制分享码</button>
             </div>
 
@@ -48,7 +48,7 @@
 
             <!-- 获取到的文本卡片 -->
             <div id="text-card" class="hidden">
-                <p><span id="text-display"></span></p>
+                <p>获取到的文本： <span id="text-display"></span></p>
                 <button id="copy-text-button">复制文本</button>
             </div>
         </div>
