--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="wrapper">
-        <div class="card">
+        <div class="card" draggable="true">
             <h1>Share Your Text</h1>
             <!-- 输入文字 -->
             <textarea id="text-input" placeholder="在此输入您的文本（最多 500 个字符）"></textarea>
@@ -19,12 +19,12 @@
             <!-- 选择过期时间 -->
             <label for="expiration-select">到期时间：</label>
             <select id="expiration-select">
-        <option value="1d">1 天</option>
-        <option value="3d">3 天</option>
-        <option value="7d">1 周</option>
-        <option value="30d">1 月</option>
-        <option value="custom">自定义</option>
-      </select>
+                <option value="1d">1 天</option>
+                <option value="3d">3 天</option>
+                <option value="7d">1 周</option>
+                <option value="30d">1 月</option>
+                <option value="custom">自定义</option>
+            </select>
 
             <!-- 自定义过期时间 -->
             <div id="custom-expiration" style="display:none;">
@@ -47,7 +47,7 @@
             <button id="fetch-button">获取文本</button>
 
             <!-- 获取到的文本卡片 -->
-            <div id="text-card" class="hidden">
+            <div id="text-card" class="hidden" draggable="true">
                 <p><span id="text-display"></span></p>
                 <button id="copy-text-button">复制文本</button>
             </div>
