--- a/index.html
+++ b/index.html
@@ -49,10 +49,9 @@
             <!-- 获取到的文本卡片 -->
             <div id="text-card" class="hidden" draggable="true">
                 <p><span id="text-display"></span></p>
+                <!-- 将复制按钮放入文本卡片中 -->
+                <button id="copy-text-button">复制文本</button>
             </div>
-
-            <!-- 复制文本按钮（放在文本卡片外） -->
-            <button id="copy-text-button" class="hidden">复制文本</button>
         </div>
     </div>
     <script src="script.js"></script>
