--- a/index.html
+++ b/index.html
@@ -4,22 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Share Text & Files</title>
+    <title>Share Your Text or File</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="wrapper">
-        <!-- 切换按钮 -->
         <div class="toggle-buttons">
-            <button id="text-button" class="active">文本分享</button>
-            <button id="file-button">文件分享</button>
+            <button id="text-share-button" class="toggle-button active">文本分享</button>
+            <button id="file-share-button" class="toggle-button">文件分享</button>
         </div>
 
-        <!-- 文本分享卡片 -->
-        <div class="card" id="text-card" draggable="true">
-            <h1>分享您的文本</h1>
+        <div class="card" id="text-share-card">
+            <h1>Share Your Text</h1>
             <textarea id="text-input" placeholder="在此输入您的文本（最多 500 个字符）"></textarea>
             <label for="expiration-select">到期时间：</label>
             <select id="expiration-select">
@@ -35,48 +33,46 @@
                 <label for="custom-time">选择时间：</label>
                 <input type="time" id="custom-time">
             </div>
-            <button id="submit-text-button">生成分享码</button>
-            <div id="text-code-card" class="hidden">
-                <p>分享码： <span id="text-code-display"></span></p>
-                <button id="copy-text-code-button">复制分享码</button>
+            <button id="submit-button">生成分享码</button>
+
+            <div id="code-card" class="hidden">
+                <p>分享码： <span id="code-display"></span></p>
+                <button id="copy-code-button">复制分享码</button>
             </div>
-            <input id="text-code-input" placeholder="输入分享码">
-            <button id="fetch-text-button">获取文本</button>
-            <div id="fetched-text-card" class="hidden" draggable="true">
-                <p><span id="fetched-text-display"></span></p>
-                <button id="copy-fetched-text-button">复制文本</button>
+            <input id="code-input" placeholder="输入分享码">
+            <button id="fetch-button">获取文本</button>
+
+            <div id="text-card" class="hidden">
+                <p><span id="text-display"></span></p>
+                <button id="copy-text-button">复制文本</button>
             </div>
         </div>
 
-        <!-- 文件分享卡片 -->
-        <div class="card hidden" id="file-card" draggable="true">
-            <h1>分享您的文件</h1>
+        <div class="card hidden" id="file-share-card">
+            <h1>Share Your File</h1>
             <input type="file" id="file-input">
-            <label for="file-expiration-select">到期时间：</label>
-            <select id="file-expiration-select">
+            <label for="expiration-select-file">到期时间：</label>
+            <select id="expiration-select-file">
                 <option value="1d">1 天</option>
                 <option value="3d">3 天</option>
                 <option value="7d">1 周</option>
                 <option value="30d">1 月</option>
                 <option value="custom">自定义</option>
             </select>
-            <div id="file-custom-expiration" style="display:none;">
-                <label for="file-custom-date">选择日期：</label>
-                <input type="date" id="file-custom-date">
-                <label for="file-custom-time">选择时间：</label>
-                <input type="time" id="file-custom-time">
+            <div id="custom-expiration-file" style="display:none;">
+                <label for="custom-date-file">选择日期：</label>
+                <input type="date" id="custom-date-file">
+                <label for="custom-time-file">选择时间：</label>
+                <input type="time" id="custom-time-file">
             </div>
             <button id="submit-file-button">生成分享码</button>
+
             <div id="file-code-card" class="hidden">
                 <p>分享码： <span id="file-code-display"></span></p>
                 <button id="copy-file-code-button">复制分享码</button>
             </div>
             <input id="file-code-input" placeholder="输入分享码">
-            <button id="fetch-file-button">下载文件</button>
-            <div id="file-progress" class="hidden">
-                <progress id="file-progress-bar" value="0" max="100"></progress>
-                <span id="file-progress-text">0%</span>
-            </div>
+            <button id="fetch-file-button">获取文件</button>
         </div>
     </div>
     <script src="script.js"></script>
